# MoonhookV4

./: .gitignore  CMakeLists.txt  README.md  zensical.toml
docs/: index.md
docs/installation/: other.md  windows.md
docs/pluginmanual/: apireference.md  getting_started.md
include/: ansi_terminal.hpp  bot.hpp  console.hpp  consolerandom.hpp  internal_options.hpp  option.hpp  pluginregistry.hpp  plugins.hpp  webhook.hpp
src/: bot.cpp  main.cpp  plugins.cpp  webhook.cpp
